--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,39 @@
-[requires]
-python_version = "python-3.6.6"
+asn1crypto==0.24.0
+certifi==2018.4.16
+cffi==1.11.5
+chardet==3.0.4
+click==6.7
+cryptography==2.2.2
+dash==0.21.1
+dash-core-components==0.23.0
+dash-html-components==0.11.0
+dash-renderer==0.13.0
+decorator==4.3.0
+Flask==1.0.2
+Flask-Compress==1.4.0
+gunicorn==19.8.1
+idna==2.7
+inflection==0.3.1
+ipython-genutils==0.2.0
+itsdangerous==0.24
+Jinja2==2.10
+jsonschema==2.6.0
+jupyter-core==4.4.0
+MarkupSafe==1.0
+more-itertools==4.2.0
+nbformat==4.4.0
+ndg-httpsclient==0.5.0
+numpy==1.14.5
+pandas==0.23.1
+plotly==2.7.0
+pyasn1==0.4.3
+pycparser==2.18
+pyOpenSSL==18.0.0
+python-dateutil==2.7.3
+pytz==2018.5
+Quandl==3.3.0
+requests==2.19.1
+six==1.11.0
+traitlets==4.3.2
+urllib3==1.23
+Werkzeug==0.14.1
